--- a/css/style.css
+++ b/css/style.css
@@ -162,18 +162,20 @@ img:hover {
 }
 
 #restartGame {
-    background-color: #4CAF50; /* Green */
+    background-color:transparent; /* Green */
 	border: none;
-	padding: 32px 16px;
+
+	padding: 16px 16px;
     color: white;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
+    font-size: 2.5em;
+    margin-top: 20px;
 	cursor: pointer;
 	font-family: Pixel;
-	border-radius: 8px;
+	//border-radius: 8px;
+	text-shadow: -5px 5px 0px #012e2e, -10px 10px 0px #018d8d, -15px 15px 0px #02cccc;
 }
 
 .container {
